@@ -29,26 +29,6 @@ import java.util.Properties;
 import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
 import static uk.gov.hmcts.darts.arm.util.ArchiveConstants.ArchiveRecordOperationValues.UPLOAD_NEW_FILE;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_001_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_002_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_003_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_004_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_005_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_006_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_007_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_008_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_009_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_010_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_011_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_012_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_013_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_014_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_015_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_016_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_017_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_018_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_019_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_020_KEY;
 import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyValues.CASE_NUMBERS_KEY;
 import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyValues.CHANNEL_KEY;
 import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyValues.CHECKSUM_KEY;
@@ -67,8 +47,8 @@ import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropert
 @Component
 @RequiredArgsConstructor
 @Slf4j
-@SuppressWarnings({"PMD.GodClass"})
-public class MediaArchiveRecordMapperImpl implements MediaArchiveRecordMapper {
+@SuppressWarnings({"PMD.GodClass", "PMD.CyclomaticComplexity"})
+public class MediaArchiveRecordMapperImpl extends BaseArchiveRecordMapper implements MediaArchiveRecordMapper {
 
     public static final String CASE_LIST_DELIMITER = "|";
     private final ArmDataManagementConfiguration armDataManagementConfiguration;
@@ -76,14 +56,12 @@ public class MediaArchiveRecordMapperImpl implements MediaArchiveRecordMapper {
     private Properties mediaRecordProperties;
 
     private DateTimeFormatter dateTimeFormatter;
-    private DateTimeFormatter dateFormatter;
-
 
     @Override
     public MediaArchiveRecord mapToMediaArchiveRecord(ExternalObjectDirectoryEntity externalObjectDirectory,
                                                       String rawFilename) {
         dateTimeFormatter = DateTimeFormatter.ofPattern(armDataManagementConfiguration.getDateTimeFormat());
-        dateFormatter = DateTimeFormatter.ofPattern(armDataManagementConfiguration.getDateFormat());
+
         try {
             loadMediaProperties();
             MediaEntity media = externalObjectDirectory.getMedia();
@@ -120,7 +98,6 @@ public class MediaArchiveRecordMapperImpl implements MediaArchiveRecordMapper {
             .build();
     }
 
-    @SuppressWarnings({"java:S3776", "PMD.CyclomaticComplexity", "PMD.CognitiveComplexity", "PMD.NPathComplexity"})
     private RecordMetadata createArchiveRecordMetadata(ExternalObjectDirectoryEntity externalObjectDirectory) {
         MediaEntity media = externalObjectDirectory.getMedia();
         OffsetDateTime retainUntilTs = media.getRetainUntilTs();
@@ -151,70 +128,22 @@ public class MediaArchiveRecordMapperImpl implements MediaArchiveRecordMapper {
             metadata.setRetentionConfidenceScore(media.getRetConfScore().getId());
         }
 
-        if (mediaRecordProperties.containsKey(BF_001_KEY)) {
-            metadata.setBf001(mapToString(mediaRecordProperties.getProperty(BF_001_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_002_KEY)) {
-            metadata.setBf002(mapToString(mediaRecordProperties.getProperty(BF_002_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_003_KEY)) {
-            metadata.setBf003(mapToString(mediaRecordProperties.getProperty(BF_003_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_004_KEY)) {
-            metadata.setBf004(mapToString(mediaRecordProperties.getProperty(BF_004_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_005_KEY)) {
-            metadata.setBf005(mapToString(mediaRecordProperties.getProperty(BF_005_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_006_KEY)) {
-            metadata.setBf006(mapToString(mediaRecordProperties.getProperty(BF_006_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_007_KEY)) {
-            metadata.setBf007(mapToString(mediaRecordProperties.getProperty(BF_007_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_008_KEY)) {
-            metadata.setBf008(mapToString(mediaRecordProperties.getProperty(BF_008_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_009_KEY)) {
-            metadata.setBf009(mapToString(mediaRecordProperties.getProperty(BF_009_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_010_KEY)) {
-            metadata.setBf010(mapToString(mediaRecordProperties.getProperty(BF_010_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_011_KEY)) {
-            metadata.setBf011(mapToString(mediaRecordProperties.getProperty(BF_011_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_012_KEY)) {
-            metadata.setBf012(mapToInt(mediaRecordProperties.getProperty(BF_012_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_013_KEY)) {
-            metadata.setBf013(mapToInt(mediaRecordProperties.getProperty(BF_013_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_014_KEY)) {
-            metadata.setBf014(mapToInt(mediaRecordProperties.getProperty(BF_014_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_015_KEY)) {
-            metadata.setBf015(mapToInt(mediaRecordProperties.getProperty(BF_015_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_016_KEY)) {
-            metadata.setBf016(mapToString(mediaRecordProperties.getProperty(BF_016_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_017_KEY)) {
-            metadata.setBf017(mapToString(mediaRecordProperties.getProperty(BF_017_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_018_KEY)) {
-            metadata.setBf018(mapToString(mediaRecordProperties.getProperty(BF_018_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_019_KEY)) {
-            metadata.setBf019(mapToString(mediaRecordProperties.getProperty(BF_019_KEY), media));
-        }
-        if (mediaRecordProperties.containsKey(BF_020_KEY)) {
-            metadata.setBf020(mapToString(mediaRecordProperties.getProperty(BF_020_KEY), media));
-        }
+        setMetadataProperties(metadata, media);
         return metadata;
     }
 
-    @SuppressWarnings({"PMD.CyclomaticComplexity"})
+    private void setMetadataProperties(RecordMetadata metadata, MediaEntity mediaEntity) {
+        for (String key : mediaRecordProperties.stringPropertyNames()) {
+            String value = mapToString(mediaRecordProperties.getProperty(key), mediaEntity);
+            if (value != null) {
+                processStringMetadataProperties(metadata, key, value);
+            } else {
+                Integer intValue = mapToInt(mediaRecordProperties.getProperty(key), mediaEntity);
+                processIntMetadataProperties(metadata, key, intValue);
+            }
+        }
+    }
+
     private String mapToString(String key, MediaEntity media) {
         return switch (key) {
             case OBJECT_TYPE_KEY -> ArchiveRecordType.MEDIA_ARCHIVE_TYPE.getArchiveTypeDescription();
@@ -242,7 +171,7 @@ public class MediaArchiveRecordMapperImpl implements MediaArchiveRecordMapper {
     private String getHearingDate(MediaEntity media) {
         String hearingDate = null;
         if (CollectionUtils.isNotEmpty(media.getHearingList())) {
-            hearingDate = OffsetDateTime.of(media.getHearingList().get(0).getHearingDate().atTime(0, 0, 0),
+            hearingDate = OffsetDateTime.of(media.getHearingList().getFirst().getHearingDate().atTime(0, 0, 0),
                                             ZoneOffset.UTC).format(dateTimeFormatter);
         }
         return hearingDate;
@@ -273,8 +202,8 @@ public class MediaArchiveRecordMapperImpl implements MediaArchiveRecordMapper {
 
     private static String getCourtroom(MediaEntity media) {
         String courtroom = null;
-        if (CollectionUtils.isNotEmpty(media.getHearingList()) && nonNull(media.getHearingList().get(0).getCourtroom())) {
-            courtroom = media.getHearingList().get(0).getCourtroom().getName();
+        if (CollectionUtils.isNotEmpty(media.getHearingList()) && nonNull(media.getHearingList().getFirst().getCourtroom())) {
+            courtroom = media.getHearingList().getFirst().getCourtroom().getName();
         } else if (nonNull(media.getCourtroom())) {
             courtroom = media.getCourtroom().getName();
         }
