@@ -33,26 +33,6 @@ import static java.util.Objects.nonNull;
 import static uk.gov.hmcts.darts.arm.util.ArchiveConstants.ArchiveMapperValues.TRANSCRIPTION_REQUEST_AUTOMATIC;
 import static uk.gov.hmcts.darts.arm.util.ArchiveConstants.ArchiveMapperValues.TRANSCRIPTION_REQUEST_MANUAL;
 import static uk.gov.hmcts.darts.arm.util.ArchiveConstants.ArchiveRecordOperationValues.UPLOAD_NEW_FILE;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_001_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_002_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_003_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_004_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_005_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_006_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_007_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_008_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_009_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_010_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_011_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_012_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_013_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_014_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_015_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_016_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_017_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_018_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_019_KEY;
-import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyKeys.BF_020_KEY;
 import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyValues.CASE_NUMBERS_KEY;
 import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyValues.CHECKSUM_KEY;
 import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropertyValues.COMMENTS_KEY;
@@ -76,7 +56,7 @@ import static uk.gov.hmcts.darts.transcriptions.enums.TranscriptionStatusEnum.RE
 @RequiredArgsConstructor
 @Slf4j
 @SuppressWarnings({"PMD.GodClass", "PMD.CyclomaticComplexity"})
-public class TranscriptionArchiveRecordMapperImpl implements TranscriptionArchiveRecordMapper {
+public class TranscriptionArchiveRecordMapperImpl extends BaseArchiveRecordMapper implements TranscriptionArchiveRecordMapper {
 
     private static final String CASE_LIST_DELIMITER = "|";
 
@@ -86,14 +66,12 @@ public class TranscriptionArchiveRecordMapperImpl implements TranscriptionArchiv
     private Properties transcriptionRecordProperties;
 
     private DateTimeFormatter dateTimeFormatter;
-    private DateTimeFormatter dateFormatter;
 
 
     @Override
     public TranscriptionArchiveRecord mapToTranscriptionArchiveRecord(ExternalObjectDirectoryEntity externalObjectDirectory,
                                                                       String rawFilename) {
         dateTimeFormatter = DateTimeFormatter.ofPattern(armDataManagementConfiguration.getDateTimeFormat());
-        dateFormatter = DateTimeFormatter.ofPattern(armDataManagementConfiguration.getDateFormat());
 
         try {
             loadTranscriptionProperties();
@@ -131,7 +109,7 @@ public class TranscriptionArchiveRecordMapperImpl implements TranscriptionArchiv
     private UploadNewFileRecord createUploadNewFileRecord(TranscriptionDocumentEntity transcriptionDocument, Integer relationId, String rawFilename) {
         UploadNewFileRecord uploadNewFileRecord = new UploadNewFileRecord();
         uploadNewFileRecord.setOperation(UPLOAD_NEW_FILE);
-        uploadNewFileRecord.setRelationId(relationId.toString());
+        uploadNewFileRecord.setRelationId(String.valueOf(relationId));
         uploadNewFileRecord.setFileMetadata(createUploadNewFileRecordMetadata(transcriptionDocument, rawFilename));
         return uploadNewFileRecord;
     }
@@ -151,7 +129,6 @@ public class TranscriptionArchiveRecordMapperImpl implements TranscriptionArchiv
             .build();
     }
 
-    @SuppressWarnings({"java:S3776", "PMD.CyclomaticComplexity", "PMD.CognitiveComplexity", "PMD.NPathComplexity"})
     private RecordMetadata createArchiveRecordMetadata(ExternalObjectDirectoryEntity externalObjectDirectory) {
         TranscriptionDocumentEntity transcriptionDocument = externalObjectDirectory.getTranscriptionDocumentEntity();
         OffsetDateTime retainUntilTs = transcriptionDocument.getRetainUntilTs();
@@ -181,67 +158,20 @@ public class TranscriptionArchiveRecordMapperImpl implements TranscriptionArchiv
             metadata.setRetentionConfidenceScore(transcriptionDocument.getRetConfScore().getId());
         }
 
-        if (transcriptionRecordProperties.containsKey(BF_001_KEY)) {
-            metadata.setBf001(mapToString(transcriptionRecordProperties.getProperty(BF_001_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_002_KEY)) {
-            metadata.setBf002(mapToString(transcriptionRecordProperties.getProperty(BF_002_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_003_KEY)) {
-            metadata.setBf003(mapToString(transcriptionRecordProperties.getProperty(BF_003_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_004_KEY)) {
-            metadata.setBf004(mapToString(transcriptionRecordProperties.getProperty(BF_004_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_005_KEY)) {
-            metadata.setBf005(mapToString(transcriptionRecordProperties.getProperty(BF_005_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_006_KEY)) {
-            metadata.setBf006(mapToString(transcriptionRecordProperties.getProperty(BF_006_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_007_KEY)) {
-            metadata.setBf007(mapToString(transcriptionRecordProperties.getProperty(BF_007_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_008_KEY)) {
-            metadata.setBf008(mapToString(transcriptionRecordProperties.getProperty(BF_008_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_009_KEY)) {
-            metadata.setBf009(mapToString(transcriptionRecordProperties.getProperty(BF_009_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_010_KEY)) {
-            metadata.setBf010(mapToString(transcriptionRecordProperties.getProperty(BF_010_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_011_KEY)) {
-            metadata.setBf011(mapToString(transcriptionRecordProperties.getProperty(BF_011_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_012_KEY)) {
-            metadata.setBf012(mapToInt(transcriptionRecordProperties.getProperty(BF_012_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_013_KEY)) {
-            metadata.setBf013(mapToInt(transcriptionRecordProperties.getProperty(BF_013_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_014_KEY)) {
-            metadata.setBf014(mapToInt(transcriptionRecordProperties.getProperty(BF_014_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_015_KEY)) {
-            metadata.setBf015(mapToInt(transcriptionRecordProperties.getProperty(BF_015_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_016_KEY)) {
-            metadata.setBf016(mapToString(transcriptionRecordProperties.getProperty(BF_016_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_017_KEY)) {
-            metadata.setBf017(mapToString(transcriptionRecordProperties.getProperty(BF_017_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_018_KEY)) {
-            metadata.setBf018(mapToString(transcriptionRecordProperties.getProperty(BF_018_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_019_KEY)) {
-            metadata.setBf019(mapToString(transcriptionRecordProperties.getProperty(BF_019_KEY), transcriptionDocument));
-        }
-        if (transcriptionRecordProperties.containsKey(BF_020_KEY)) {
-            metadata.setBf020(mapToString(transcriptionRecordProperties.getProperty(BF_020_KEY), transcriptionDocument));
-        }
+        setMetadataProperties(metadata, transcriptionDocument);
         return metadata;
+    }
+
+    private void setMetadataProperties(RecordMetadata metadata, TranscriptionDocumentEntity transcriptionDocument) {
+        for (String key : transcriptionRecordProperties.stringPropertyNames()) {
+            String value = mapToString(transcriptionRecordProperties.getProperty(key), transcriptionDocument);
+            if (value != null) {
+                processStringMetadataProperties(metadata, key, value);
+            } else {
+                Integer intValue = mapToInt(transcriptionRecordProperties.getProperty(key), transcriptionDocument);
+                processIntMetadataProperties(metadata, key, intValue);
+            }
+        }
     }
 
     private String mapToString(String key, TranscriptionDocumentEntity transcriptionDocument) {
@@ -270,7 +200,7 @@ public class TranscriptionArchiveRecordMapperImpl implements TranscriptionArchiv
         if (cases.isEmpty()) {
             return null;
         } else if (cases.size() == 1) {
-            return cases.get(0).getCaseNumber();
+            return cases.getFirst().getCaseNumber();
         } else {
             List<String> caseNumbers = cases
                 .stream()
@@ -372,7 +302,7 @@ public class TranscriptionArchiveRecordMapperImpl implements TranscriptionArchiv
             hearingDate = OffsetDateTime.of(transcriptionDocument.getTranscription().getHearingDate().atTime(0, 0, 0),
                                             ZoneOffset.UTC).format(dateTimeFormatter);
         } else if (CollectionUtils.isNotEmpty(transcriptionDocument.getTranscription().getHearings())) {
-            hearingDate = OffsetDateTime.of(transcriptionDocument.getTranscription().getHearings().get(0).getHearingDate().atTime(0, 0, 0),
+            hearingDate = OffsetDateTime.of(transcriptionDocument.getTranscription().getHearings().getFirst().getHearingDate().atTime(0, 0, 0),
                                             ZoneOffset.UTC).format(dateTimeFormatter);
         }
         return hearingDate;
